<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medirect Doctor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_detail">ItemDetail</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_patients">Patients</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_prescriptions">Prescriptions</string>
    <string name="menu_patient">Patients</string>
    <string name="menu_History">Add History</string>
    <string name="menu_Medicine">Add Medicine</string>
      <string name="menu_Diagnostics">Add Diagnostics</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_education">Education</string>
    <string name="menu_confirm_order">Confirm Order</string>
    <string name="menu_delivery_address">Delivery Address</string>
    <string name="menu_payment_method">Payment Method</string>
    <string name="new_patient">Patient</string>
    <string name="new_prescription">New Prescription</string>
    <string name="recent_patients">Recent Patients</string>
    <string name="qualification">Qualifications &amp; Skills</string>
    <string name="Personaldata">Personal Data</string>
    <string name="myprofile">MY Profile</string>
    <string name="patientId">Patient Id</string>
    <string name="condition">Condition</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="todaysAppointments">Todays Appointments</string>
    <string name="SeeMore">See More</string>
    <string name="PatientName">Patient Name</string>
    <string name="Place">Place</string>
    <string name="idstr">ID</string>
    <string name="credit">Credit</string>
    <string name="Debit">Debit</string>
    <string name="Balance">Balance</string>
    <string name="availBalance">Available Balance</string>
    <string name="redeemeBalance">Redeem Balance</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="Submit">Submit</string>
    <string name="MyWallet">My Wallet</string>
    <string name="login">LOGIN</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="copyright">2014 Medirect All rights reserved</string>
    <string name="password">Password</string>
    <string name="username">user name</string>
    <string name="dateSliderTitle">Selected date</string>
    <string name="error_field_required">Please enter valid details</string>
    <string name="error_internet">"Please check Your Internet Connection !"</string>
    <string name="PatientAddress">Patient Address:</string>
    <string name="Message">Message</string>
    <string name="Status">Status</string>
    <string name="AccountNo">Account No</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="ViewPrescriptions">View Prescriptions</string>
    <string name="NewPrescriptions">New Prescriptions</string>
    <string name="NewMessage">New Message</string>
    <string name="Address">Address</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="changepassword">Change Password</string>
    <string name="confirmnewpassword">Confirm New Password</string>
    <string name="saveandcontinue">Save &amp; Continue</string>
    <string name="saveandchanges">Save &amp; Changes</string>
    <string name="editprofile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="Age">Age</string>
    <string name="Male">Male</string>
    <string name="No_of_refills">No: of Refills</string>
    <string name="medicine">Medicine/dose</string>
    <string name="dose">Dose/day</string>
    <string name="No_of_days">No of days</string>
    <string name="type_a_note">Type a note here...</string>
    <string name="add">Add</string>
    <string name="DoctorName">Doctor Name</string>
    <string name="Notes">Notes</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="invitation_msg">*An invitation will be sent to the email address</string>
    <string name="recentmessage">Recent Messages</string>
    <string name="send">Send</string>
    <string name="typeyourmessage">Type your message here..</string>
    <string name="searchhint">Account No,First Name,Last Name,Email,Phone...</string>
    <string name="DOB">DOB</string>
    <string name="address1">address1</string>
    <string name="address2">address2</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="country">country</string>
    <string name="pincode">pincode</string>
    <string name="medicineName">Medicine Name</string>
    <string name="Refill">Refill</string>
    <string name="saveAndNotify">Save And Notify</string>
    <string name="ConfirmPrescription">Confirm Prescription</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">CANCEL</string>
    <string name="edit">Edit</string>
    <string name="emptymsgwarning">Message cannot be empty</string>
    <string name="error_field_required_empty">Fields required</string>
    <string name="patientdetails">Patient Details</string>
    <string name="Search">Search</string>

    <string-array name="GenderArray">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="choose_user">Choose atleast one user</string>
    <string name="chose_file">Choose File</string>
    <string name="chose_country">Choose Country</string>
    <string name="chose_state">Choose State</string>
    <string name="chose_city">Choose City</string>
    <string name="type">Type</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="name">Name</string>
    <string name="landmark">Landmark</string>
    <string name="generateInvoice">Generate Invoice</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="choose_medicine">Choose Medicine</string>
    <string name="medicine_not_selected">Medicine not selected</string>
    <string name="dosage">Frequency</string>
        <string name="dosageTeext">Dosage</string>
    <string name="no_user">please select user</string>
    <string name="reschedule">Reschedule</string>
    <string name="save">SAVE</string>
    <string name="set">Set</string>
    <string name="unitprice">Unit price</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Sub total</string>
    <string name="proceed">Proceed</string>
    <string name="Medicines">Medicines</string>
    <string name="AddNewAddress">Add New Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Next">Next</string>
    <string name="Suggest">Suggest</string>
    <string name="Symptoms">Symptoms</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="AddMedicine">Add Medicine</string>
    <string name="AddDiagnosis">Add Diagnosis</string>
    <string name="AddHistory">Add History</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="test">Test</string>
    <string name="testname">Test name</string>
    <string name="Default">Default Values</string>
    <string name="defaul">Default </string>
    <string name="Values">Values</string>
    <string name="allergies">Allergies</string>
    <string name="familyhistory">Family History</string>
    <string name="surgicalhistory">Surgical History</string>
    <string name="medicalhistory">Medical History</string>
    <string name="dm">DM</string>
    <string name="htn">HTN</string>
    <string name="thyroid">Thyroid</string>
    <string name="asthma">Asthma</string>
    <string name="tumors">Tumors</string>
    <string name="ca">CA</string>
    <string name="morning">Morning</string>
    <string name="AfterNoon">Afternoon</string>
    <string name="Evening">Evening</string>
    <string name="Night">Night</string>
	<string name="AmountPerDose">Amount per dose</string>
    <string-array name="FoodArray">
        <item>After Food</item>
        <item>Before Food</item>
    </string-array>

    <string name="Medicine">Medicine</string>
    <string name="Form">Form</string>
    <string name="unit">Unit</string>
    <string name="days">Days</string>
    <string name="sample">Sample</string>
    <string name="refills">Refills</string>
    <string name="lastvisit">Last Visit</string>
    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>
   <string-array name="Displayvalues">
        <item>All</item>
        <item>Doctor Notes</item>
        <item>Medicines</item>
        <item>Diagnostics</item>
    </string-array>
</resources>