<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/txtAppointmentTime"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/time" />

                    <TextView
                        android:id="@+id/txtAppointmentPatientId"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/patientId" />

                    <TextView
                        android:id="@+id/txtAppointmentName"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/name" />
                    
                    <TextView
                        android:id="@+id/txtAppointmentLastVisit"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/lastvisit" />

                    <TextView
                        android:id="@+id/txtAppointmentAge"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Age" />

                    <TextView
                        android:id="@+id/txtAppointmentGender"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/gender" />
                </LinearLayout>

</LinearLayout>
