<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical">
    
    	<LinearLayout 
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_margin="20dip"
    		android:orientation="vertical" >
    	
        	<TextView
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="20dip"
        		android:text="@string/ConfirmPrescription"
        		android:textColor="@color/new_prescription"
        		android:textStyle="bold" />
        
        	<LinearLayout 
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:background="@color/table_menu_bg_color"
    			android:paddingTop="10dip"
    			android:orientation="horizontal" >

    			<TextView
        			android:layout_width="0dip"
        			android:layout_height="wrap_content"
        			android:layout_weight="2"
        			android:gravity="center"
        			android:text="@string/medicineName" />

    			<TextView
        			android:layout_width="0dip"
        			android:layout_height="wrap_content"
        			android:layout_weight="1"
        			android:gravity="center"
        			android:text="@string/medicine" />

    			<TextView
        			android:layout_width="0dip"
        			android:layout_height="wrap_content"
        			android:layout_weight="2"
        			android:gravity="center"
        			android:text="@string/dosage" />
    
    			<TextView
        			android:layout_width="0dip"
        			android:layout_height="wrap_content"
        			android:layout_weight="1"
        			android:gravity="center"
        			android:text="@string/No_of_days" />
    
    			<TextView
        			android:layout_width="0dip"
        			android:layout_height="wrap_content"
        			android:layout_weight="1"
        			android:gravity="center"
        			android:text="@string/Refill" />
    
    			<!-- <TextView
        			android:layout_width="0dip"
        			android:layout_height="wrap_content"
        			android:layout_weight="2"
        			android:gravity="center"
        			android:text="@string/Notes" /> -->
    

			</LinearLayout>

        	<ListView
         		android:id="@+id/lstDialogConfirm"
         		android:layout_width="match_parent"
         		android:layout_height="wrap_content" >
     		</ListView>

        	<RelativeLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_margin="20dip"
        	    android:layout_marginRight="5dip"
        	    android:gravity="center_vertical"
        	    android:orientation="horizontal" >

        	    <TextView
        	        android:id="@+id/txtConfirm"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_margin="5dip"
        	        android:layout_toLeftOf="@+id/txtCancel"
        	        android:background="@drawable/new_patient_background"
        	        android:drawablePadding="10dip"
        	        android:gravity="center"
        	        android:padding="12dip"
        	        android:text="@string/saveAndNotify"
        	        android:textColor="@android:color/white" />

        	    <TextView
        	        android:id="@+id/txtCancel"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_margin="5dip"
        	        android:layout_toLeftOf="@+id/txtGenerateInvoice"
        	        android:background="@drawable/new_patient_background"
        	        android:drawablePadding="10dip"
        	        android:gravity="center"
        	        android:padding="12dip"
        	        android:text="@string/edit"
        	        android:textColor="@android:color/white" />
        	    
        	    <TextView
        	        android:id="@+id/txtGenerateInvoice"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:layout_margin="5dip"
        	        android:layout_alignParentRight="true"
        	        android:background="@drawable/new_patient_background"
        	        android:drawablePadding="10dip"
        	        android:gravity="center"
        	        android:padding="12dip"
        	        android:text="@string/generateInvoice"
        	        android:textColor="@android:color/white" />
        	</RelativeLayout>

   		</LinearLayout>
   	
    </ScrollView>
	
</LinearLayout>
