<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/actionbar_menu" />

            <!-- <HorizontalScrollView -->
            <!-- android:id="@+id/horizontalScrollView1" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:scrollbars="none" > -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:layout_marginRight="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewWallet"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/recent_patients"
                    android:drawablePadding="10dip"
                    android:gravity="center_vertical"
                    android:text="@string/MyWallet" />
            </LinearLayout>
            <!-- </HorizontalScrollView> -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dip" >

                <TextView
                    android:id="@+id/textViewavailBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/availBalance" />

                <TextView
                    android:id="@+id/textViewavailBalanceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="Rs:1000/-"
                    android:textColor="@color/new_prescription" />

                <Button
                    android:id="@+id/buttonredeemeBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:background="@drawable/new_patient_background"
                    android:padding="5dip"
                    android:text="@string/redeemeBalance"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/bordergrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dip"
                android:gravity="center"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/textViewfrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/from" />

                <EditText
                    android:id="@+id/editTextfrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_back"
                    android:editable="false"
                    android:focusable="false"
                    android:padding="10dip" >
                </EditText>

                <TextView
                    android:id="@+id/textVieTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/to" />

                <EditText
                    android:id="@+id/editTextTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_back"
                    android:editable="false"
                    android:focusable="false"
                    android:padding="10dip" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/new_patient_background"
                    android:padding="5dip"
                    android:text="@string/Submit"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:background="@drawable/border_back"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/table_menu_bg_color"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTime"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/time" 
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textViewDebit"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/type" 
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textViewBalance"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Balance" 
                        android:textStyle="bold"/>
                </LinearLayout>

                <ListView
                    android:id="@+id/listviewPrescriptionsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>