<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/login_land_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.3"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="10dip"
            android:gravity="left"
            android:hint="@string/username"
            android:padding="15dip"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" >
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dip"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:padding="15dip"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/buttonLoginCheck"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dip"
            android:background="@color/new_prescription_click"
            android:gravity="center"
            android:paddingBottom="15dip"
            android:paddingLeft="50dip"
            android:paddingRight="50dip"
            android:paddingTop="15dip"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/forgotpassword"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewcopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="50dip"
            android:text="@string/copyright"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>