<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtConfirm"
        android:layout_width="400dip"
        android:layout_height="wrap_content"
        android:drawablePadding="10dip"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="15dip"
        android:text="@string/Confirm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#285A8C" >
    </LinearLayout>

    <TextView
        android:id="@+id/txtReschedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dip"
        android:gravity="center"
        android:padding="15dip"
        android:text="@string/reschedule"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#285A8C" >
    </LinearLayout>

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dip"
        android:gravity="center"
        android:padding="15dip"
        android:text="@string/Cancel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

  

</LinearLayout>